k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: seo-sea-backend
  namespace: production
spec:
  selector:
    app: seo-sea-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
